objects/Harbor_Maint_Tables__c.object
<CustomObject>
    <description>Reference table for IIP calculations.</description>
    <fields>
        <fullName>HMT_Brand_Code_Description__c</fullName>
        <label>Brand Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMT_Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMT_Harbor_Mant_Fee_Per_Case__c</fullName>
        <label>Harbor Mant Fee Per Case</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Harbor Maint Table</label>
    <nameField>
        <label>Harbor Maint Tables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harbor Maint Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>